PM 페이지 구현

--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -17,6 +17,7 @@
     "actions": "작업",
     "filter": "필터",
     "reset": "초기화",
+    "resetFilter": "필터 초기화",
     "export": "내보내기",
     "import": "가져오기",
     "download": "다운로드",
@@ -28,7 +29,22 @@
     "clearChat": "대화 초기화",
     "generatingResponse": "응답 생성 중...",
     "usageTips": "사용 팁",
-    "sampleQuestions": "예시 질문"
+    "sampleQuestions": "예시 질문",
+    "previous": "이전",
+    "next": "다음",
+    "select": "선택하세요",
+    "saving": "저장 중...",
+    "deleting": "삭제 중...",
+    "uploading": "업로드 중...",
+    "validating": "검증 중...",
+    "row": "행",
+    "valid": "유효",
+    "validCount": "{{count}}건 유효",
+    "errorCount": "{{count}}건 오류",
+    "active": "활성",
+    "inactive": "비활성",
+    "duplicate": "복제",
+    "create": "생성"
   },
   "auth": {
     "login": "로그인",
@@ -51,6 +67,13 @@
     "maintenanceHistory": "수리 이력 조회",
     "maintenanceMonitor": "수리 현황",
     "notifications": "알림",
+    "pm": "PM 관리",
+    "pmDashboard": "PM 대시보드",
+    "pmCalendar": "PM 캘린더",
+    "pmSchedules": "PM 일정 목록",
+    "pmExecution": "PM 실행",
+    "pmTemplates": "PM 템플릿 관리",
+    "pmAnalytics": "PM 분석",
     "analytics": "분석",
     "statistics": "통계 분석",
     "report": "리포트",
@@ -98,9 +121,12 @@
   "equipment": {
     "title": "설비 관리",
     "list": "설비 목록",
+    "totalCount": "총 {{count}}대의 설비",
     "equipmentNo": "설비번호",
+    "equipmentCode": "설비 코드",
     "equipmentName": "설비명",
     "equipmentType": "설비유형",
+    "equipmentTypeAll": "설비 유형 전체",
     "status": "상태",
     "installDate": "설치일",
     "manufacturer": "제조사",
@@ -116,22 +142,81 @@
     "statusStandby": "대기",
     "categoryMain": "메인 설비",
     "categorySub": "서브 설비",
+    "categoryMainShort": "주",
+    "categorySubShort": "부",
+    "mainEquipment": "주설비",
+    "subEquipment": "부대설비",
     "bulkUpload": "일괄 등록",
-    "downloadTemplate": "템플릿 다운로드"
+    "downloadTemplate": "템플릿 다운로드",
+    "register": "설비 등록",
+    "detail": "설비 상세 정보",
+    "startRepair": "수리 시작",
+    "viewHistory": "수리 이력 보기",
+    "searchPlaceholder": "설비 코드 또는 설비명 검색",
+    "management": "설비 관리",
+    "typeManagement": "설비 유형 관리",
+    "typeList": "설비 유형 목록",
+    "typeCode": "코드",
+    "typeName": "유형명",
+    "typeCategory": "카테고리",
+    "typeStatus": "상태",
+    "equipmentCount": "설비 수",
+    "typeNote": "* 설비 유형 추가/수정은 시스템 관리자에게 문의하세요.",
+    "editEquipment": "설비 수정",
+    "deleteEquipment": "설비 삭제",
+    "deleteConfirm": "{{code}} ({{name}}) 설비를 삭제하시겠습니까?",
+    "deleteWarning": "이 작업은 되돌릴 수 없습니다. 해당 설비와 관련된 수리 이력은 유지됩니다.",
+    "codeRequired": "설비 코드를 입력해주세요.",
+    "nameRequired": "설비명을 입력해주세요.",
+    "typeRequired": "설비 유형을 선택해주세요.",
+    "buildingRequired": "동을 선택해주세요.",
+    "saveError": "저장 중 오류가 발생했습니다.",
+    "codePlaceholder": "예: CNC-801",
+    "namePlaceholder": "예: CNC 밀링 머신 #801",
+    "manufacturerPlaceholder": "예: FANUC",
+    "active": "활성",
+    "inactive": "비활성",
+    "templateDownload": "템플릿 다운로드 (CSV)",
+    "templateDescription": "설비 일괄 등록을 위한 엑셀 템플릿을 다운로드하세요. 템플릿에는 필수 필드와 예시 데이터가 포함되어 있습니다.",
+    "requiredFields": "필수 필드:",
+    "requiredFieldCode": "설비코드: 고유 식별 코드 (예: CNC-801)",
+    "requiredFieldName": "설비명: 설비 이름",
+    "requiredFieldType": "설비유형코드: CNC, CL, DBR, TRI 등",
+    "requiredFieldBuilding": "동: 설비가 위치한 동 (예: A동, B동)",
+    "uploadArea": "CSV 또는 Excel 파일을 드래그하거나 클릭하여 업로드하세요.",
+    "uploadPreview": "업로드 미리보기",
+    "uploadCount": "{{count}}건 업로드",
+    "uploadComplete": "업로드 완료",
+    "uploadResult": "성공: {{success}}건, 실패: {{failed}}건",
+    "typeReference": "설비 유형 코드 참조",
+    "codeValidation": "설비코드 필수",
+    "nameValidation": "설비명 필수",
+    "typeValidation": "설비유형코드 필수",
+    "buildingValidation": "동 필수",
+    "invalidType": "유효하지 않은 설비유형: {{code}}",
+    "dateFormatError": "설치일 형식 오류 (YYYY-MM-DD)",
+    "uploadError": "업로드 중 오류가 발생했습니다."
   },
   "maintenance": {
     "title": "수리 관리",
     "recordNo": "수리번호",
     "date": "수리일자",
     "technician": "작업 담당자",
+    "technicianSelect": "담당자 선택",
     "repairType": "수리 유형",
+    "repairTypeSelect": "수리유형 선택",
+    "equipmentTypeSelect": "설비유형 선택",
     "symptom": "증상 설명",
+    "symptomPlaceholder": "증상을 입력하세요...",
     "usedParts": "사용 부품",
+    "noUsedParts": "사용된 부품이 없습니다. 필요시 부품을 추가하세요.",
+    "addPart": "부품 추가",
     "startTime": "수리 시작시간",
     "endTime": "수리 완료시간",
     "repairContent": "수리 내용",
     "rating": "완료 평점",
     "duration": "소요시간",
+    "durationMinutes": "{{minutes}}분",
     "statusInProgress": "진행중",
     "statusCompleted": "완료",
     "startRepair": "수리 시작 등록",
@@ -160,13 +245,21 @@
     "ratingLabel": "수리 평점 (1-10)",
     "repairContentPlaceholder": "수리 내용을 입력하세요...",
     "equipmentInfo": "설비",
+    "equipmentSearch": "설비번호 검색...",
+    "equipmentSearchGuide": "설비를 검색하여 선택하세요",
     "relatedEquipment": "관련 설비",
     "elapsedTime": "경과 시간",
     "requiredTime": "소요 시간",
     "completedMessage": "수리가 완료되었습니다",
     "failedMessage": "수리 완료 처리에 실패했습니다",
     "todayCompletedRepairs": "금일 완료된 수리",
-    "noTodayCompleted": "오늘 완료된 수리가 없습니다"
+    "noTodayCompleted": "오늘 완료된 수리가 없습니다",
+    "startGuide": "수리 시작 가이드",
+    "guideStep1": "설비 유형 또는 설비번호로 검색",
+    "guideStep2": "수리 유형 선택 (PM/BR/PD/QA/EM)",
+    "guideStep3": "증상 및 부품 사용 내역 입력",
+    "guideStep4": "수리 시작 버튼 클릭",
+    "datePlaceholder": "연도-월-일"
   },
   "analytics": {
     "title": "통계 분석",
@@ -191,7 +284,11 @@
     "cases": "건",
     "emergencyRatio": "긴급수리 비율",
     "buildingFailureStats": "동별 고장 현황",
-    "totalDowntime": "총 정지시간"
+    "totalDowntime": "총 정지시간",
+    "thisWeek": "이번 주",
+    "thisMonth": "이번 달",
+    "thisQuarter": "이번 분기",
+    "thisYear": "올해"
   },
   "report": {
     "title": "리포트",
@@ -400,5 +497,146 @@
     "enablePushDesc": "브라우저 및 모바일 푸시 알림을 받습니다",
     "notificationTypes": "알림 유형별 설정",
     "subscribed": "푸시 알림이 구독되어 있습니다"
+  },
+  "pm": {
+    "title": "PM 관리",
+    "dashboard": "PM 대시보드",
+    "calendar": "PM 캘린더",
+    "schedules": "PM 일정 목록",
+    "execution": "PM 실행",
+    "templates": "PM 템플릿 관리",
+    "analytics": "PM 분석",
+    "totalScheduled": "예정된 PM",
+    "completedThisMonth": "이번 달 완료",
+    "overdueCount": "지연 중",
+    "upcomingWeek": "금주 예정",
+    "complianceRate": "PM 준수율",
+    "todayPM": "오늘의 PM",
+    "upcomingPM": "예정 PM",
+    "overduePM": "지연된 PM",
+    "noPMToday": "오늘 예정된 PM이 없습니다",
+    "noUpcomingPM": "예정된 PM이 없습니다",
+    "noOverduePM": "지연된 PM이 없습니다",
+    "startPM": "PM 시작",
+    "completePM": "PM 완료",
+    "viewDetail": "상세 보기",
+    "scheduledDate": "예정일",
+    "assignedTechnician": "담당자",
+    "priority": "우선순위",
+    "priorityHigh": "높음",
+    "priorityMedium": "중간",
+    "priorityLow": "낮음",
+    "statusScheduled": "예정",
+    "statusInProgress": "진행중",
+    "statusCompleted": "완료",
+    "statusOverdue": "지연",
+    "statusCancelled": "취소",
+    "template": "템플릿",
+    "templateName": "템플릿명",
+    "templateDescription": "템플릿 설명",
+    "intervalType": "주기 유형",
+    "intervalValue": "주기 값",
+    "intervalDaily": "일간",
+    "intervalWeekly": "주간",
+    "intervalMonthly": "월간",
+    "intervalQuarterly": "분기",
+    "intervalYearly": "연간",
+    "estimatedDuration": "예상 소요시간",
+    "checklist": "체크리스트",
+    "checklistItem": "점검 항목",
+    "checklistItems": "체크리스트 항목",
+    "requiredParts": "필요 부품",
+    "addChecklistItem": "항목 추가",
+    "removeChecklistItem": "항목 삭제",
+    "isRequired": "필수 항목",
+    "createTemplate": "템플릿 생성",
+    "editTemplate": "템플릿 수정",
+    "deleteTemplate": "템플릿 삭제",
+    "deleteTemplateConfirm": "이 템플릿을 삭제하시겠습니까?",
+    "deleteTemplateWarning": "이 템플릿으로 생성된 일정은 유지됩니다.",
+    "createSchedule": "일정 생성",
+    "editSchedule": "일정 수정",
+    "deleteSchedule": "일정 삭제",
+    "cancelSchedule": "일정 취소",
+    "deleteScheduleConfirm": "이 PM 일정을 삭제하시겠습니까?",
+    "cancelScheduleConfirm": "이 PM 일정을 취소하시겠습니까?",
+    "autoGenerate": "자동 생성",
+    "autoGenerateDesc": "템플릿 주기에 따라 PM 일정을 자동으로 생성합니다.",
+    "selectEquipments": "설비 선택",
+    "monthsAhead": "생성 기간",
+    "monthsAheadDesc": "향후 몇 개월 치 일정을 생성할지 선택합니다.",
+    "generateSchedules": "일정 생성",
+    "generatedCount": "{{count}}개의 일정이 생성되었습니다.",
+    "executionStart": "PM 시작",
+    "executionComplete": "PM 완료",
+    "checklistExecution": "체크리스트 수행",
+    "checkItem": "항목 확인",
+    "hasIssue": "이상 발견",
+    "issueNotes": "이상 내용",
+    "findings": "발견 사항",
+    "findingsSeverity": "심각도",
+    "severityNone": "없음",
+    "severityMinor": "경미",
+    "severityMajor": "주요",
+    "severityCritical": "심각",
+    "createRepairFromPM": "수리 작업 생성",
+    "createRepairFromPMDesc": "PM 중 발견된 이상으로 수리 작업을 생성합니다.",
+    "pmNotes": "PM 메모",
+    "usedParts": "사용 부품",
+    "rating": "평점",
+    "completionTime": "완료 시간",
+    "duration": "소요 시간",
+    "complianceChart": "PM 준수율 추이",
+    "byEquipmentType": "설비 유형별",
+    "byTechnician": "담당자별",
+    "pmHistory": "PM 이력",
+    "avgCompletionTime": "평균 완료 시간",
+    "totalPMCount": "총 PM 건수",
+    "scheduleCount": "일정 수",
+    "calendarView": "캘린더 보기",
+    "listView": "목록 보기",
+    "monthView": "월간 보기",
+    "weekView": "주간 보기",
+    "selectMonth": "월 선택",
+    "filterByStatus": "상태별 필터",
+    "filterByPriority": "우선순위별 필터",
+    "filterByTechnician": "담당자별 필터",
+    "filterByEquipmentType": "설비 유형별 필터",
+    "reminder3Days": "3일 전 알림",
+    "reminder1Day": "1일 전 알림",
+    "reminderToday": "당일 알림",
+    "reminderOverdue": "지연 알림",
+    "notificationSettings": "알림 설정",
+    "minutes": "분",
+    "hours": "시간",
+    "days": "일",
+    "weeks": "주",
+    "months": "개월",
+    "templateCount": "템플릿 수",
+    "createTemplateDesc": "PM 일정 자동 생성을 위한 템플릿을 생성합니다.",
+    "editTemplateDesc": "템플릿 정보를 수정합니다.",
+    "templateNamePlaceholder": "템플릿 이름을 입력하세요",
+    "selectEquipmentType": "설비 유형을 선택하세요",
+    "templateDescriptionPlaceholder": "템플릿 설명을 입력하세요",
+    "checklistItemPlaceholder": "체크리스트 항목을 입력하세요",
+    "checklistRequiredHint": "녹색 체크: 필수 항목, 회색 X: 선택 항목",
+    "required": "필수",
+    "optional": "선택",
+    "pmInterval": "PM 주기",
+    "allEquipmentTypes": "모든 설비 유형",
+    "monthlyTrend": "월별 추이",
+    "statusDistribution": "상태 분포",
+    "technicianPerformance": "기술자 성과",
+    "completedPMs": "완료 PM",
+    "avgRating": "평균 평점",
+    "complianceSummary": "PM 준수 요약",
+    "completedOnTime": "정시 완료",
+    "missedDeadlines": "지연 발생",
+    "overallCompliance": "전체 준수율",
+    "complianceTarget": "목표 준수율",
+    "vsLastMonth": "전월 대비",
+    "scheduled": "예정",
+    "completed": "완료",
+    "requiresAttention": "조치 필요"
   }
 }
