--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -17,6 +17,7 @@
     "actions": "Thao tác",
     "filter": "Bộ lọc",
     "reset": "Đặt lại",
+    "resetFilter": "Đặt lại bộ lọc",
     "export": "Xuất",
     "import": "Nhập",
     "download": "Tải xuống",
@@ -28,7 +29,22 @@
     "clearChat": "Xóa cuộc trò chuyện",
     "generatingResponse": "Đang tạo phản hồi...",
     "usageTips": "Mẹo sử dụng",
-    "sampleQuestions": "Câu hỏi mẫu"
+    "sampleQuestions": "Câu hỏi mẫu",
+    "previous": "Trước",
+    "next": "Tiếp",
+    "select": "Chọn",
+    "saving": "Đang lưu...",
+    "deleting": "Đang xóa...",
+    "uploading": "Đang tải lên...",
+    "validating": "Đang xác thực...",
+    "row": "Hàng",
+    "valid": "Hợp lệ",
+    "validCount": "{{count}} hợp lệ",
+    "errorCount": "{{count}} lỗi",
+    "active": "Hoạt động",
+    "inactive": "Không hoạt động",
+    "duplicate": "Sao chép",
+    "create": "Tạo mới"
   },
   "auth": {
     "login": "Đăng nhập",
@@ -51,6 +67,13 @@
     "maintenanceHistory": "Lịch sử sửa chữa",
     "maintenanceMonitor": "Theo dõi sửa chữa",
     "notifications": "Thông báo",
+    "pm": "Quản lý PM",
+    "pmDashboard": "Bảng điều khiển PM",
+    "pmCalendar": "Lịch PM",
+    "pmSchedules": "Danh sách lịch PM",
+    "pmExecution": "Thực hiện PM",
+    "pmTemplates": "Quản lý mẫu PM",
+    "pmAnalytics": "Phân tích PM",
     "analytics": "Phân tích",
     "statistics": "Thống kê",
     "report": "Báo cáo",
@@ -98,9 +121,12 @@
   "equipment": {
     "title": "Quản lý thiết bị",
     "list": "Danh sách thiết bị",
+    "totalCount": "Tổng {{count}} thiết bị",
     "equipmentNo": "Mã thiết bị",
+    "equipmentCode": "Mã thiết bị",
     "equipmentName": "Tên thiết bị",
     "equipmentType": "Loại thiết bị",
+    "equipmentTypeAll": "Tất cả loại thiết bị",
     "status": "Trạng thái",
     "installDate": "Ngày lắp đặt",
     "manufacturer": "Nhà sản xuất",
@@ -116,22 +142,81 @@
     "statusStandby": "Chờ",
     "categoryMain": "Thiết bị chính",
     "categorySub": "Thiết bị phụ",
+    "categoryMainShort": "Chính",
+    "categorySubShort": "Phụ",
+    "mainEquipment": "Thiết bị chính",
+    "subEquipment": "Thiết bị phụ",
     "bulkUpload": "Tải lên hàng loạt",
-    "downloadTemplate": "Tải mẫu"
+    "downloadTemplate": "Tải mẫu",
+    "register": "Đăng ký thiết bị",
+    "detail": "Chi tiết thiết bị",
+    "startRepair": "Bắt đầu sửa chữa",
+    "viewHistory": "Xem lịch sử sửa chữa",
+    "searchPlaceholder": "Tìm kiếm mã hoặc tên thiết bị",
+    "management": "Quản lý thiết bị",
+    "typeManagement": "Quản lý loại thiết bị",
+    "typeList": "Danh sách loại thiết bị",
+    "typeCode": "Mã",
+    "typeName": "Tên loại",
+    "typeCategory": "Danh mục",
+    "typeStatus": "Trạng thái",
+    "equipmentCount": "Số thiết bị",
+    "typeNote": "* Liên hệ quản trị viên hệ thống để thêm/sửa loại thiết bị.",
+    "editEquipment": "Sửa thiết bị",
+    "deleteEquipment": "Xóa thiết bị",
+    "deleteConfirm": "Bạn có chắc muốn xóa thiết bị {{code}} ({{name}})?",
+    "deleteWarning": "Thao tác này không thể hoàn tác. Lịch sử sửa chữa liên quan sẽ được giữ lại.",
+    "codeRequired": "Vui lòng nhập mã thiết bị.",
+    "nameRequired": "Vui lòng nhập tên thiết bị.",
+    "typeRequired": "Vui lòng chọn loại thiết bị.",
+    "buildingRequired": "Vui lòng chọn tòa nhà.",
+    "saveError": "Đã xảy ra lỗi khi lưu.",
+    "codePlaceholder": "Ví dụ: CNC-801",
+    "namePlaceholder": "Ví dụ: Máy phay CNC #801",
+    "manufacturerPlaceholder": "Ví dụ: FANUC",
+    "active": "Hoạt động",
+    "inactive": "Không hoạt động",
+    "templateDownload": "Tải mẫu (CSV)",
+    "templateDescription": "Tải mẫu Excel để đăng ký hàng loạt thiết bị. Mẫu bao gồm các trường bắt buộc và dữ liệu mẫu.",
+    "requiredFields": "Trường bắt buộc:",
+    "requiredFieldCode": "Mã thiết bị: Mã định danh duy nhất (Ví dụ: CNC-801)",
+    "requiredFieldName": "Tên thiết bị: Tên của thiết bị",
+    "requiredFieldType": "Mã loại thiết bị: CNC, CL, DBR, TRI, v.v.",
+    "requiredFieldBuilding": "Tòa nhà: Tòa nhà đặt thiết bị (Ví dụ: A동, B동)",
+    "uploadArea": "Kéo thả hoặc nhấp để tải lên tệp CSV hoặc Excel.",
+    "uploadPreview": "Xem trước tải lên",
+    "uploadCount": "Tải lên {{count}} mục",
+    "uploadComplete": "Tải lên hoàn tất",
+    "uploadResult": "Thành công: {{success}}, Thất bại: {{failed}}",
+    "typeReference": "Tham khảo mã loại thiết bị",
+    "codeValidation": "Mã thiết bị bắt buộc",
+    "nameValidation": "Tên thiết bị bắt buộc",
+    "typeValidation": "Mã loại thiết bị bắt buộc",
+    "buildingValidation": "Tòa nhà bắt buộc",
+    "invalidType": "Loại thiết bị không hợp lệ: {{code}}",
+    "dateFormatError": "Định dạng ngày lắp đặt không đúng (YYYY-MM-DD)",
+    "uploadError": "Đã xảy ra lỗi khi tải lên."
   },
   "maintenance": {
     "title": "Quản lý sửa chữa",
     "recordNo": "Mã sửa chữa",
     "date": "Ngày sửa chữa",
     "technician": "Kỹ thuật viên",
+    "technicianSelect": "Chọn kỹ thuật viên",
     "repairType": "Loại sửa chữa",
+    "repairTypeSelect": "Chọn loại sửa chữa",
+    "equipmentTypeSelect": "Chọn loại thiết bị",
     "symptom": "Mô tả triệu chứng",
+    "symptomPlaceholder": "Nhập triệu chứng...",
     "usedParts": "Phụ tùng sử dụng",
+    "noUsedParts": "Chưa có phụ tùng. Thêm phụ tùng nếu cần.",
+    "addPart": "Thêm phụ tùng",
     "startTime": "Thời gian bắt đầu",
     "endTime": "Thời gian hoàn thành",
     "repairContent": "Nội dung sửa chữa",
     "rating": "Đánh giá",
     "duration": "Thời gian",
+    "durationMinutes": "{{minutes}} phút",
     "statusInProgress": "Đang tiến hành",
     "statusCompleted": "Hoàn thành",
     "startRepair": "Bắt đầu sửa chữa",
@@ -160,13 +245,21 @@
     "ratingLabel": "Đánh giá sửa chữa (1-10)",
     "repairContentPlaceholder": "Nhập nội dung sửa chữa...",
     "equipmentInfo": "Thiết bị",
+    "equipmentSearch": "Tìm mã thiết bị...",
+    "equipmentSearchGuide": "Tìm kiếm và chọn thiết bị",
     "relatedEquipment": "Thiết bị liên quan",
     "elapsedTime": "Thời gian đã trôi qua",
     "requiredTime": "Thời gian cần thiết",
     "completedMessage": "Sửa chữa đã hoàn thành",
     "failedMessage": "Xử lý hoàn thành thất bại",
     "todayCompletedRepairs": "Sửa chữa hoàn thành hôm nay",
-    "noTodayCompleted": "Không có sửa chữa hoàn thành hôm nay"
+    "noTodayCompleted": "Không có sửa chữa hoàn thành hôm nay",
+    "startGuide": "Hướng dẫn bắt đầu sửa chữa",
+    "guideStep1": "Tìm theo loại hoặc mã thiết bị",
+    "guideStep2": "Chọn loại sửa chữa (PM/BR/PD/QA/EM)",
+    "guideStep3": "Nhập triệu chứng và phụ tùng sử dụng",
+    "guideStep4": "Nhấn nút bắt đầu sửa chữa",
+    "datePlaceholder": "Năm-Tháng-Ngày"
   },
   "analytics": {
     "title": "Phân tích thống kê",
@@ -191,7 +284,11 @@
     "cases": "vụ",
     "emergencyRatio": "Tỷ lệ khẩn cấp",
     "buildingFailureStats": "Thống kê hỏng theo tòa nhà",
-    "totalDowntime": "Tổng thời gian ngừng"
+    "totalDowntime": "Tổng thời gian ngừng",
+    "thisWeek": "Tuần này",
+    "thisMonth": "Tháng này",
+    "thisQuarter": "Quý này",
+    "thisYear": "Năm nay"
   },
   "report": {
     "title": "Báo cáo",
@@ -400,5 +497,146 @@
     "enablePushDesc": "Nhận thông báo đẩy trên trình duyệt và điện thoại",
     "notificationTypes": "Cài đặt theo loại thông báo",
     "subscribed": "Đã đăng ký nhận thông báo đẩy"
+  },
+  "pm": {
+    "title": "Quản lý PM",
+    "dashboard": "Bảng điều khiển PM",
+    "calendar": "Lịch PM",
+    "schedules": "Danh sách lịch PM",
+    "execution": "Thực hiện PM",
+    "templates": "Quản lý mẫu PM",
+    "analytics": "Phân tích PM",
+    "totalScheduled": "PM đã lên lịch",
+    "completedThisMonth": "Hoàn thành tháng này",
+    "overdueCount": "Quá hạn",
+    "upcomingWeek": "Tuần này",
+    "complianceRate": "Tỷ lệ tuân thủ PM",
+    "todayPM": "PM hôm nay",
+    "upcomingPM": "PM sắp tới",
+    "overduePM": "PM quá hạn",
+    "noPMToday": "Không có PM nào hôm nay",
+    "noUpcomingPM": "Không có PM sắp tới",
+    "noOverduePM": "Không có PM quá hạn",
+    "startPM": "Bắt đầu PM",
+    "completePM": "Hoàn thành PM",
+    "viewDetail": "Xem chi tiết",
+    "scheduledDate": "Ngày dự kiến",
+    "assignedTechnician": "Kỹ thuật viên phụ trách",
+    "priority": "Ưu tiên",
+    "priorityHigh": "Cao",
+    "priorityMedium": "Trung bình",
+    "priorityLow": "Thấp",
+    "statusScheduled": "Đã lên lịch",
+    "statusInProgress": "Đang tiến hành",
+    "statusCompleted": "Hoàn thành",
+    "statusOverdue": "Quá hạn",
+    "statusCancelled": "Đã hủy",
+    "template": "Mẫu",
+    "templateName": "Tên mẫu",
+    "templateDescription": "Mô tả mẫu",
+    "intervalType": "Loại chu kỳ",
+    "intervalValue": "Giá trị chu kỳ",
+    "intervalDaily": "Hàng ngày",
+    "intervalWeekly": "Hàng tuần",
+    "intervalMonthly": "Hàng tháng",
+    "intervalQuarterly": "Hàng quý",
+    "intervalYearly": "Hàng năm",
+    "estimatedDuration": "Thời gian dự kiến",
+    "checklist": "Danh sách kiểm tra",
+    "checklistItem": "Mục kiểm tra",
+    "checklistItems": "Các mục kiểm tra",
+    "requiredParts": "Phụ tùng cần thiết",
+    "addChecklistItem": "Thêm mục",
+    "removeChecklistItem": "Xóa mục",
+    "isRequired": "Bắt buộc",
+    "createTemplate": "Tạo mẫu",
+    "editTemplate": "Sửa mẫu",
+    "deleteTemplate": "Xóa mẫu",
+    "deleteTemplateConfirm": "Bạn có chắc muốn xóa mẫu này?",
+    "deleteTemplateWarning": "Các lịch đã tạo từ mẫu này sẽ được giữ lại.",
+    "createSchedule": "Tạo lịch",
+    "editSchedule": "Sửa lịch",
+    "deleteSchedule": "Xóa lịch",
+    "cancelSchedule": "Hủy lịch",
+    "deleteScheduleConfirm": "Bạn có chắc muốn xóa lịch PM này?",
+    "cancelScheduleConfirm": "Bạn có chắc muốn hủy lịch PM này?",
+    "autoGenerate": "Tạo tự động",
+    "autoGenerateDesc": "Tự động tạo lịch PM theo chu kỳ của mẫu.",
+    "selectEquipments": "Chọn thiết bị",
+    "monthsAhead": "Thời gian tạo",
+    "monthsAheadDesc": "Chọn số tháng để tạo lịch trước.",
+    "generateSchedules": "Tạo lịch",
+    "generatedCount": "Đã tạo {{count}} lịch.",
+    "executionStart": "Bắt đầu PM",
+    "executionComplete": "Hoàn thành PM",
+    "checklistExecution": "Thực hiện kiểm tra",
+    "checkItem": "Xác nhận mục",
+    "hasIssue": "Phát hiện vấn đề",
+    "issueNotes": "Ghi chú vấn đề",
+    "findings": "Phát hiện",
+    "findingsSeverity": "Mức độ nghiêm trọng",
+    "severityNone": "Không có",
+    "severityMinor": "Nhẹ",
+    "severityMajor": "Nghiêm trọng",
+    "severityCritical": "Rất nghiêm trọng",
+    "createRepairFromPM": "Tạo công việc sửa chữa",
+    "createRepairFromPMDesc": "Tạo công việc sửa chữa từ vấn đề phát hiện trong PM.",
+    "pmNotes": "Ghi chú PM",
+    "usedParts": "Phụ tùng đã dùng",
+    "rating": "Đánh giá",
+    "completionTime": "Thời gian hoàn thành",
+    "duration": "Thời gian thực hiện",
+    "complianceChart": "Biểu đồ tuân thủ PM",
+    "byEquipmentType": "Theo loại thiết bị",
+    "byTechnician": "Theo kỹ thuật viên",
+    "pmHistory": "Lịch sử PM",
+    "avgCompletionTime": "Thời gian hoàn thành TB",
+    "totalPMCount": "Tổng số PM",
+    "scheduleCount": "Số lịch",
+    "calendarView": "Xem lịch",
+    "listView": "Xem danh sách",
+    "monthView": "Xem tháng",
+    "weekView": "Xem tuần",
+    "selectMonth": "Chọn tháng",
+    "filterByStatus": "Lọc theo trạng thái",
+    "filterByPriority": "Lọc theo ưu tiên",
+    "filterByTechnician": "Lọc theo KTV",
+    "filterByEquipmentType": "Lọc theo loại TB",
+    "reminder3Days": "Nhắc trước 3 ngày",
+    "reminder1Day": "Nhắc trước 1 ngày",
+    "reminderToday": "Nhắc ngày hôm đó",
+    "reminderOverdue": "Nhắc quá hạn",
+    "notificationSettings": "Cài đặt thông báo",
+    "minutes": "phút",
+    "hours": "giờ",
+    "days": "ngày",
+    "weeks": "tuần",
+    "months": "tháng",
+    "templateCount": "Số mẫu",
+    "createTemplateDesc": "Tạo mẫu để tự động tạo lịch PM.",
+    "editTemplateDesc": "Chỉnh sửa thông tin mẫu.",
+    "templateNamePlaceholder": "Nhập tên mẫu",
+    "selectEquipmentType": "Chọn loại thiết bị",
+    "templateDescriptionPlaceholder": "Nhập mô tả mẫu",
+    "checklistItemPlaceholder": "Nhập mục kiểm tra",
+    "checklistRequiredHint": "Dấu tích xanh: Bắt buộc, X xám: Tùy chọn",
+    "required": "Bắt buộc",
+    "optional": "Tùy chọn",
+    "pmInterval": "Chu kỳ PM",
+    "allEquipmentTypes": "Tất cả loại thiết bị",
+    "monthlyTrend": "Xu hướng hàng tháng",
+    "statusDistribution": "Phân bố trạng thái",
+    "technicianPerformance": "Hiệu suất kỹ thuật viên",
+    "completedPMs": "PM hoàn thành",
+    "avgRating": "Đánh giá trung bình",
+    "complianceSummary": "Tóm tắt tuân thủ PM",
+    "completedOnTime": "Hoàn thành đúng hạn",
+    "missedDeadlines": "Trễ hạn",
+    "overallCompliance": "Tỷ lệ tuân thủ tổng thể",
+    "complianceTarget": "Mục tiêu tuân thủ",
+    "vsLastMonth": "So với tháng trước",
+    "scheduled": "Đã lên lịch",
+    "completed": "Hoàn thành",
+    "requiresAttention": "Cần xử lý"
   }
 }
