--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -13,6 +13,7 @@
     "noSearchResults": "검색 결과가 없습니다",
     "success": "성공",
     "error": "오류",
+    "warning": "경고",
     "required": "필수 항목입니다",
     "actions": "작업",
     "filter": "필터",
@@ -80,6 +81,7 @@
     "ai": "AI 인사이트",
     "aiInsight": "자동 인사이트",
     "aiChat": "AI 질의응답",
+    "parts": "부품 정보",
     "admin": "관리",
     "userManagement": "사용자 관리",
     "rolePermission": "권한 관리",
@@ -135,6 +137,8 @@
     "building": "동",
     "buildingAll": "동 전체",
     "zone": "구역",
+    "location": "위치",
+    "info": "설비 정보",
     "statusNormal": "정상",
     "statusPM": "PM 중",
     "statusRepair": "수리 중",
@@ -506,6 +510,34 @@
     "pmScheduleTitle": "PM 일정 알림",
     "pmScheduleMessage": "{{equipment}} 설비의 PM 예정일입니다."
   },
+  "parts": {
+    "title": "부품 정보",
+    "list": "부품 목록",
+    "partCode": "부품 코드",
+    "partName": "부품명",
+    "category": "카테고리",
+    "unit": "단위",
+    "currentStock": "현재 재고",
+    "minStock": "최소 재고",
+    "location": "위치",
+    "supplier": "공급업체",
+    "unitPrice": "단가",
+    "description": "설명",
+    "searchPlaceholder": "부품 코드 또는 부품명 검색",
+    "allCategories": "전체 카테고리",
+    "totalCount": "총 {{count}}개 부품",
+    "totalParts": "전체 부품",
+    "categories": "카테고리 수",
+    "lowStockItems": "재고 부족",
+    "outOfStockItems": "재고 소진",
+    "inStock": "재고 있음",
+    "lowStock": "재고 부족",
+    "outOfStock": "재고 없음",
+    "stockStatus": "재고 상태",
+    "pageInfo": "{{current}} / {{total}} 페이지 (총 {{count}}개)",
+    "notConnected": "부품 데이터베이스 연결 안됨",
+    "notConnectedDesc": "부품 관리 시스템과의 연결이 설정되지 않았습니다. 관리자에게 문의하세요."
+  },
   "pm": {
     "title": "PM 관리",
     "dashboard": "PM 대시보드",
@@ -563,6 +595,10 @@
     "deleteTemplateConfirm": "이 템플릿을 삭제하시겠습니까?",
     "deleteTemplateWarning": "이 템플릿으로 생성된 일정은 유지됩니다.",
     "createSchedule": "일정 생성",
+    "createScheduleDesc": "PM 일정을 생성합니다.",
+    "selectTemplate": "템플릿 선택",
+    "templateInfo": "템플릿 정보",
+    "noEquipmentsForType": "선택한 템플릿의 설비 유형에 해당하는 설비가 없습니다.",
     "editSchedule": "일정 수정",
     "deleteSchedule": "일정 삭제",
     "cancelSchedule": "일정 취소",
@@ -648,6 +684,48 @@
     "requiresAttention": "조치 필요",
     "selectScheduleToStart": "PM 일정을 선택하세요",
     "selectScheduleToStartDesc": "PM 일정 목록 또는 캘린더에서 PM을 선택하여 시작하세요.",
-    "scheduleNotFound": "PM 일정을 찾을 수 없습니다."
+    "scheduleNotFound": "PM 일정을 찾을 수 없습니다.",
+    "scheduleDetail": "PM 일정 상세",
+    "scheduleInfo": "일정 정보",
+    "executionInfo": "실행 정보",
+    "executedBy": "실행자",
+    "noChecklistItems": "체크리스트 항목이 없습니다",
+    "bulkUpload": "일괄 등록",
+    "bulkUploadDesc": "Excel 파일을 이용하여 PM 템플릿을 일괄 등록합니다.",
+    "downloadExcelTemplate": "1단계: Excel 양식 다운로드",
+    "downloadTemplate": "양식 다운로드",
+    "exportExisting": "기존 템플릿 내보내기",
+    "downloadTemplateHint": "양식을 다운로드하여 작성 후 업로드하세요. 설비유형 코드표 시트를 참조하세요.",
+    "uploadExcelFile": "2단계: Excel 파일 업로드",
+    "selectFile": "파일 선택",
+    "validationResults": "3단계: 검증 결과",
+    "validationErrors": "{{count}}개의 오류가 발견되었습니다",
+    "validTemplates": "{{count}}개의 템플릿이 검증되었습니다",
+    "row": "행",
+    "column": "열",
+    "uploadAndCreate": "{{count}}개 템플릿 등록",
+    "excelTemplateDownloaded": "Excel 양식이 다운로드되었습니다",
+    "excelDownloadFailed": "Excel 양식 다운로드에 실패했습니다",
+    "excelExportSuccess": "템플릿이 Excel로 내보내졌습니다",
+    "excelExportFailed": "템플릿 내보내기에 실패했습니다",
+    "excelValidationSuccess": "파일 검증 완료",
+    "excelValidationSuccessDesc": "{{count}}개의 템플릿이 검증되었습니다. 등록 버튼을 클릭하세요.",
+    "excelProcessFailed": "파일 처리 중 오류가 발생했습니다",
+    "bulkUploadComplete": "일괄 등록 완료",
+    "bulkUploadCompleteDesc": "{{success}}개 성공, {{fail}}개 실패",
+    "bulkUploadFailed": "일괄 등록에 실패했습니다",
+    "selectLanguage": "언어 선택",
+    "selectLanguageHint": "Excel 양식의 언어를 선택하세요. 선택한 언어로 데이터가 저장됩니다.",
+    "singleCreate": "개별 등록",
+    "scheduleDownloadTemplateHint": "Excel 양식을 다운로드하여 일정 정보를 입력한 후 업로드하세요. 템플릿, 설비, 담당자 코드표 시트를 참조하세요.",
+    "scheduleExcelValidationSuccess": "{{count}}개의 일정이 검증되었습니다.",
+    "scheduleBulkUploadComplete": "일괄 등록 완료: {{success}}개 성공, {{fail}}개 실패",
+    "uploadAndCreateSchedules": "{{count}}개 일정 등록",
+    "andMoreErrors": "외 {{count}}건 더 있음",
+    "andMoreSchedules": "외 {{count}}건 더 있음",
+    "scheduleBulkUploadDesc": "Excel 파일을 이용하여 PM 일정을 일괄 등록합니다.",
+    "validSchedules": "{{count}}개의 일정이 유효합니다",
+    "noTemplatesAvailable": "등록된 템플릿이 없습니다. 먼저 PM 템플릿을 생성해주세요.",
+    "scheduleCreated": "PM 일정이 생성되었습니다"
   }
 }
