--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -13,6 +13,7 @@
     "noSearchResults": "Không tìm thấy kết quả",
     "success": "Thành công",
     "error": "Lỗi",
+    "warning": "Cảnh báo",
     "required": "Bắt buộc",
     "actions": "Thao tác",
     "filter": "Bộ lọc",
@@ -80,6 +81,7 @@
     "ai": "AI Insight",
     "aiInsight": "Insight tự động",
     "aiChat": "Hỏi đáp AI",
+    "parts": "Thông tin phụ tùng",
     "admin": "Quản trị",
     "userManagement": "Quản lý người dùng",
     "rolePermission": "Quản lý quyền",
@@ -135,6 +137,8 @@
     "building": "Tòa nhà",
     "buildingAll": "Tất cả tòa nhà",
     "zone": "Khu vực",
+    "location": "Vị trí",
+    "info": "Thông tin thiết bị",
     "statusNormal": "Bình thường",
     "statusPM": "Đang PM",
     "statusRepair": "Đang sửa chữa",
@@ -506,6 +510,34 @@
     "pmScheduleTitle": "Thông báo lịch PM",
     "pmScheduleMessage": "Đến lịch PM cho thiết bị {{equipment}}."
   },
+  "parts": {
+    "title": "Thông tin phụ tùng",
+    "list": "Danh sách phụ tùng",
+    "partCode": "Mã phụ tùng",
+    "partName": "Tên phụ tùng",
+    "category": "Danh mục",
+    "unit": "Đơn vị",
+    "currentStock": "Tồn kho hiện tại",
+    "minStock": "Tồn kho tối thiểu",
+    "location": "Vị trí",
+    "supplier": "Nhà cung cấp",
+    "unitPrice": "Đơn giá",
+    "description": "Mô tả",
+    "searchPlaceholder": "Tìm kiếm mã hoặc tên phụ tùng",
+    "allCategories": "Tất cả danh mục",
+    "totalCount": "Tổng {{count}} phụ tùng",
+    "totalParts": "Tổng phụ tùng",
+    "categories": "Số danh mục",
+    "lowStockItems": "Tồn kho thấp",
+    "outOfStockItems": "Hết hàng",
+    "inStock": "Còn hàng",
+    "lowStock": "Tồn kho thấp",
+    "outOfStock": "Hết hàng",
+    "stockStatus": "Trạng thái tồn kho",
+    "pageInfo": "Trang {{current}} / {{total}} (Tổng {{count}})",
+    "notConnected": "Chưa kết nối cơ sở dữ liệu phụ tùng",
+    "notConnectedDesc": "Kết nối với hệ thống quản lý phụ tùng chưa được thiết lập. Vui lòng liên hệ quản trị viên."
+  },
   "pm": {
     "title": "Quản lý PM",
     "dashboard": "Bảng điều khiển PM",
@@ -563,6 +595,10 @@
     "deleteTemplateConfirm": "Bạn có chắc muốn xóa mẫu này?",
     "deleteTemplateWarning": "Các lịch đã tạo từ mẫu này sẽ được giữ lại.",
     "createSchedule": "Tạo lịch",
+    "createScheduleDesc": "Tạo lịch PM mới.",
+    "selectTemplate": "Chọn mẫu",
+    "templateInfo": "Thông tin mẫu",
+    "noEquipmentsForType": "Không có thiết bị nào cho loại thiết bị của mẫu đã chọn.",
     "editSchedule": "Sửa lịch",
     "deleteSchedule": "Xóa lịch",
     "cancelSchedule": "Hủy lịch",
@@ -648,6 +684,48 @@
     "requiresAttention": "Cần xử lý",
     "selectScheduleToStart": "Chọn lịch PM",
     "selectScheduleToStartDesc": "Chọn PM từ danh sách lịch hoặc lịch để bắt đầu.",
-    "scheduleNotFound": "Không tìm thấy lịch PM."
+    "scheduleNotFound": "Không tìm thấy lịch PM.",
+    "scheduleDetail": "Chi tiết lịch PM",
+    "scheduleInfo": "Thông tin lịch",
+    "executionInfo": "Thông tin thực hiện",
+    "executedBy": "Người thực hiện",
+    "noChecklistItems": "Không có mục kiểm tra",
+    "bulkUpload": "Tải lên hàng loạt",
+    "bulkUploadDesc": "Đăng ký mẫu PM hàng loạt bằng file Excel.",
+    "downloadExcelTemplate": "Bước 1: Tải mẫu Excel",
+    "downloadTemplate": "Tải mẫu",
+    "exportExisting": "Xuất mẫu hiện có",
+    "downloadTemplateHint": "Tải mẫu, điền thông tin và tải lên. Tham khảo bảng mã loại thiết bị.",
+    "uploadExcelFile": "Bước 2: Tải file Excel",
+    "selectFile": "Chọn file",
+    "validationResults": "Bước 3: Kết quả xác thực",
+    "validationErrors": "Phát hiện {{count}} lỗi",
+    "validTemplates": "{{count}} mẫu đã được xác thực",
+    "row": "Dòng",
+    "column": "Cột",
+    "uploadAndCreate": "Đăng ký {{count}} mẫu",
+    "excelTemplateDownloaded": "Đã tải mẫu Excel",
+    "excelDownloadFailed": "Không thể tải mẫu Excel",
+    "excelExportSuccess": "Đã xuất mẫu ra Excel",
+    "excelExportFailed": "Không thể xuất mẫu",
+    "excelValidationSuccess": "Xác thực hoàn tất",
+    "excelValidationSuccessDesc": "{{count}} mẫu đã được xác thực. Nhấn nút đăng ký.",
+    "excelProcessFailed": "Lỗi xử lý file",
+    "bulkUploadComplete": "Tải lên hàng loạt hoàn tất",
+    "bulkUploadCompleteDesc": "{{success}} thành công, {{fail}} thất bại",
+    "bulkUploadFailed": "Tải lên hàng loạt thất bại",
+    "selectLanguage": "Chọn ngôn ngữ",
+    "selectLanguageHint": "Chọn ngôn ngữ cho mẫu Excel. Dữ liệu sẽ được lưu bằng ngôn ngữ đã chọn.",
+    "singleCreate": "Tạo đơn lẻ",
+    "scheduleDownloadTemplateHint": "Tải mẫu Excel, điền thông tin lịch và tải lên. Tham khảo bảng mã mẫu, thiết bị, kỹ thuật viên.",
+    "scheduleExcelValidationSuccess": "{{count}} lịch đã được xác thực.",
+    "scheduleBulkUploadComplete": "Tải lên hàng loạt hoàn tất: {{success}} thành công, {{fail}} thất bại",
+    "uploadAndCreateSchedules": "Đăng ký {{count}} lịch",
+    "andMoreErrors": "và {{count}} lỗi khác",
+    "andMoreSchedules": "và {{count}} lịch khác",
+    "scheduleBulkUploadDesc": "Đăng ký lịch PM hàng loạt bằng file Excel.",
+    "validSchedules": "{{count}} lịch hợp lệ",
+    "noTemplatesAvailable": "Chưa có mẫu. Vui lòng tạo mẫu PM trước.",
+    "scheduleCreated": "Đã tạo lịch PM"
   }
 }
